@@ -1,4 +1,4 @@
-﻿3ARRANO.com <3arrano@3arrano.com>, 2005.
+3ARRANO.com <3arrano@3arrano.com>, 2005.
 Adib Taraben <theadib@yahoo.com>, 2004.
 Alastair McKinstry <mckinstry@computer.org>, 2000.
 Aleksandar Urošević <urke@users.sourceforge.net>, 2004, 2005, 2006.
@@ -65,7 +65,7 @@ Simos Xenitellis <simos@hellug.gr>, 2001.
 Spyros Blanas <cid_e@users.sourceforge.net>, 2006.
 Stefan Graubner <pflaumenmus92@gmx.net>, 2005.
 Takeshi Aihana <aihana@muc.biglobe.ne.jp>, 2000-2001.
-Jose Antonio Salgueiro <developer@telefonica.net>.
+Uwe Schöler <uschoeler@yahoo.de>, 2006.
 Valek Filippov <frob@df.ru>, 2000, 2003.
 Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>, 2003.
 Vital Khilko <dojlid@mova.org>, 2003.
